CDPD-45443: HIVE-25848: Empty result for structs in point lookup optimization with vectorization on (#3592) (Gergely Hanko, reviewed by Alessandro Solimando and Adam Szita)
(cherry picked from commit a017e54c98c76ccf0c185b47533b336b0a398dc7)

Change-Id: I4c096fec95efe8fc3829fabc405ac51303dfd729